--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "author": "Ishaan Gulrajani <igul222@gmail.com> ()",
-  "name": "react\-bootstrap\-forms",
-  "description": "Bootstrap form components for React with support for validations.",
+  "name": "react-bootstrap-forms",
   "version": "0.0.1",
-  "repository": {
-    "url": "https:\/\/github.com\/igul222\/react\-bootstrap\-forms.git"
-  },
+  "description": "Bootstrap form components for React with support for validations.",
+  "author": "Ishaan Gulrajani <igul222@gmail.com> (https://ishaan.io)",
   "main": "./lib/index.js",
-  "scripts": {
-    "test": "make test"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/igul222/react-bootstrap-forms.git"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "hint-hint": "~0.3.0",
-    "tap": "~0.3.1"
+  "dependencies": {
+    "react": "^0.11.1"
   },
-  "optionalDependencies": {},
-  "engines": {
-    "node": ">=0.6"
-  }
+  "license": "MIT"
 }
